# bad-apple-esp32c6

./: README.md
bad-apple-esp32c6/: CMakeLists.txt
bad-apple-esp32c6/.cache/clangd/index/: definitions.h.0F67BEDA0A49516F.idx  lcd.c.849CAC00696D9B8F.idx  lcd.h.ADC7B1BB1F800C08.idx  network.c.E23E547FF0E103BE.idx  network.h.1CAE9FEF5E99223C.idx  program.c.C1113271F90A25A6.idx
bad-apple-esp32c6/main/: CMakeLists.txt  definitions.h  lcd.c  lcd.h  network.c  network.h  program.c
go-uploader/: uploader.go
go-uploader/vid/: ffmpegCommands.sh
